--- a/.github/workflows/pandoc_build.yml
+++ b/.github/workflows/pandoc_build.yml
@@ -32,6 +32,10 @@ jobs:
                 --css=styling.css
                 --to=html5
                 ${{ env.FILELIST }}
-                --output=build/${{ env.FILELIST }}
+                --output=build/${{ env.FILELIST }}  
+      - uses: actions/upload-artifact@master
+        with:
+          name: build
+          path: build
                 
                 
