--- a/.github/workflows/pandoc_build.yml
+++ b/.github/workflows/pandoc_build.yml
@@ -27,13 +27,9 @@ jobs:
           
       
       - uses: docker://pandoc/core:2.9
-        with:
-          args: >-
-                --standalone
-                --css=styling.css
-                --to=html5
-                ${{ env.FILELIST }}
-                --output=build/${{ env.FILELIST }}
+      - run: |
+          find ./ -iname "*.md" -type f -exec sh -c 'pandoc --standalone --css=styling.css --to=html5 "${0}" -o "./output/$(basename ${0%.md}.html)"' {} \;
+
       - uses: actions/upload-artifact@master
         with:
           name: build
