--- a/.github/workflows/pandoc_build.yml
+++ b/.github/workflows/pandoc_build.yml
@@ -20,13 +20,17 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout
       - uses: actions/checkout@v2
+      - name: Make output folder
+        run: mkdir output
+      - name: Run pandoc
       - run: |
           find ./ -iname "*.md" -type f -exec sh -c 'pandoc --standalone --css=styling.css --to=html5 "${0}" -o "./output/$(basename ${0%.md}.html)"' {} \;
-
+      - name: Upload artifact
       - uses: actions/upload-artifact@master
         with:
-          name: build
-          path: build
+          name: output
+          path: output
                 
                 
