--- a/.github/workflows/pandoc_build.yml
+++ b/.github/workflows/pandoc_build.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Make output folder
         run: mkdir output
       - name: Run pandoc
-      - run: |
+        run: |
           find ./ -iname "*.md" -type f -exec sh -c 'pandoc --standalone --css=styling.css --to=html5 "${0}" -o "./output/$(basename ${0%.md}.html)"' {} \;
       - name: Upload artifact
       - uses: actions/upload-artifact@master
