--- a/.github/workflows/pandoc_build_changed.yml
+++ b/.github/workflows/pandoc_build_changed.yml
@@ -29,10 +29,13 @@ jobs:
           done
           for f in $CHANGED_FILES;
           do
-            mv $f output/$f
+            if [[ "$f" == *"$MARKDOWN"* ]]; then
+              mv $f output/$f
+            fi
           done
         env:
           FOLDER_LIST: "./crockpot ./dessert"
+          MARKDOMN: .md
       - name: Upload artifact
         uses: actions/upload-artifact@master
         with:
