--- a/.github/workflows/pandoc_build_all.yml
+++ b/.github/workflows/pandoc_build_all.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Find Changed files
-        run: echo "CHANGED_FILES=$(find -type f -name "*.md")" >> $GITHUB_ENV
+        run: echo "CHANGED_FILES="$(find -type f -name "*.md")"" >> $GITHUB_ENV
         shell: bash
       - name: Move diff files
         run: |
