--- a/.github/workflows/pandoc_build_all.yml
+++ b/.github/workflows/pandoc_build_all.yml
@@ -14,6 +14,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Setup Python
+        uses: actions/setup-python@v2.2.1
+      - name: Generate index.md files
+        run: python indexgen.py
       - name: Find Changed files
         run: echo "CHANGED_FILES="$(find -type f -name "*.md")"" >> $GITHUB_ENV
         shell: bash
