--- a/.github/workflows/pandoc_build_all.yml
+++ b/.github/workflows/pandoc_build_all.yml
@@ -10,7 +10,8 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  Get list of changed files:
+  get_markdown_files:
+    name: Get all markdown files
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -41,8 +42,9 @@ jobs:
         with:
           name: output
           path: output
-  Pandoc build:
-    needs: Get list of changed files
+  pandoc_build:
+    name: Pandoc build on changed files
+    needs: get_markdown_files
     container: pandoc/core:2.9
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -71,8 +73,9 @@ jobs:
         with:
           name: build
           path: build
-  Open PR on github pages repo:
-    needs: Pandoc build
+  open_pr:
+    name: Open PR on github pages repo
+    needs: pandoc_build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout github pages repo
