--- a/.github/workflows/pandoc_build_all.yml
+++ b/.github/workflows/pandoc_build_all.yml
@@ -32,6 +32,7 @@ jobs:
             mkdir output/$f
           done
           mv styling.css output/styling.css
+          mv replacefilter.lua output/replacefilter.lua
           for f in $CHANGED_FILES;
           do
             mv $f output/$f
@@ -47,7 +48,6 @@ jobs:
     needs: get_markdown_files
     container: pandoc/core:2.9
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Download Artifact files
         uses: actions/download-artifact@master
@@ -66,7 +66,7 @@ jobs:
           CHANGED_FILES=`cat changed.txt`
           for f in $CHANGED_FILES;
           do
-            pandoc --standalone --css=https://githubrecipes.com/styling.css --to=html5 "$f" -o "./build/${f:0:-3}.html"
+            pandoc --standalone --lua-filter=replacefilter.lua --css=https://githubrecipes.com/styling.css --to=html5 "$f" -o "./build/${f:0:-3}.html"
           done
       - name: Upload artifact
         uses: actions/upload-artifact@master
