--- a/.github/workflows/pandoc_build_all.yml
+++ b/.github/workflows/pandoc_build_all.yml
@@ -14,9 +14,8 @@ jobs:
     name: Get all markdown files
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - name: Setup Python
         uses: actions/setup-python@v2.2.1
       - name: Generate index.md files
