--- a/.github/workflows/pandoc_build_changed.yml
+++ b/.github/workflows/pandoc_build_changed.yml
@@ -3,11 +3,12 @@ name: Pandoc build only changed files
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  #push:
- #   branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
+#   # Triggers the workflow on push or pull request events but only for the main branch
+#   #push:
+#  #   branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
