--- a/.github/workflows/pandoc_build_pr.yml
+++ b/.github/workflows/pandoc_build_pr.yml
@@ -14,10 +14,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           branch: ${{ github.ref }}
+          fetch-depth: 0
       - name: Setup Python
         uses: actions/setup-python@v2.2.1
       - name: Find Changed files
-        run: echo "CHANGED_FILES=$(git diff --name-only ${{ github.head_ref }}..${{ github.ref }})" >> $GITHUB_ENV
+        run: echo "CHANGED_FILES=$(git diff --name-only ${{ github.base_ref }}..${{ github.head_ref }})" >> $GITHUB_ENV
         shell: bash
       - name: Move diff files
         run: |
