Make assets folder before trying to put things in it.

--- a/.github/workflows/pandoc_build_all.yml
+++ b/.github/workflows/pandoc_build_all.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Move diff files
         run: |
           mkdir output
+          mkdir assets
           for f in $FOLDER_LIST;
           do
             mkdir output/$f
